[package]
name = "arcux-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "arcux Phase 2: async gRPC client SDK."

[lib]
name = "arcux_client"
path = "src/lib.rs"

[dependencies]
arcux-rpc = { path = "../rpc" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
